--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
      <head>
-       <title>Brit's Project Proposal</title>
+       <title>Brittani Wallsten</title>
           <link rel="stylesheet" href="style.css">
           <script src="script.js"></script>
   </head>
+<body>
+     <h1> Brittani Wallsten </h1>
+          
